--- a/2人生经验.md
+++ b/2人生经验.md
@@ -1,17 +1,16 @@
 # 我的世界观
-## 1. 做爱的经验
-并不是做爱最舒服，而是你保持充盈状态下看到什么都是欲望，看到什么都是美的是最舒服的。
-## 2. 美女为什么会美
+## 1. 美女为什么会美
 美女的线条好，线条符合人类抽象的头脑，头脑对抽象的东西，完美的东西会有独特的癖好，所以只要对方线条好，人也不会差在哪儿。
-## 3. 故事
+## 2. 故事
 很多难懂的东西通过故事的形式表达出来，实现难懂的东西变成简单的东西。vim命令有很多，以故事的形式，展示自己实际操作的过程和遇到的问题，实现vim工具的讲解和使用。
-## 4. 付费就是赚便宜
+## 3. 付费就是赚便宜
 免费意味着不稳定，意味着没有人对你的资源负责。
 付费意味着自由，意味着保障。
-## 5. 我使用的一些工具
+最近在玩内网穿透的技术，上网查资料查了半天，最后还是通过闲鱼找到一家专门做这个的，30块很快解决问题，非常的厉害。
+## 4. 我使用的一些工具
 - linux系统，会用一两个就可以了，不必要研究太多系统，关键是让这个系统为我工作，一个是建立一个网站。还有一个就是可以方便自己上网用。
 - 网站用来方便自己，同时也是用来打造个人IP。
 - vim是用来写程序的工具，它只是一个工具，不能解决个人其他问题。
 - 出国可以解决个人很多问题，包括家庭问题。
-## 6. 稳定性
+## 5. 稳定性
 MX-linux和ubuntu相比，ubuntu更加的稳定。因此使用ubuntu会更好一些。其他系统用起来也是比较舒服的。  
