--- a/6工作方式.md
+++ b/6工作方式.md
@@ -6,4 +6,4 @@
 
 个人网站建设，首先是自己使用，其次是别人也可以看到。个人网站用来写自己的东西。
 ## 2文档笔记
-要把自己的笔记都放在服务器上，不管在哪儿都能看到。这个方法也非常好，并且可以通过git推送到自己的仓库。
+要把自己的笔记都放在服务器上，不管在哪儿都能看到。这个方法也非常好，并且可以通过git推送到自己的仓库。笔记就放在自己的服务器上就行，改天服务器在增加一块银盘，把自己的数据每天备份一份即可。
