--- a/7网址.md
+++ b/7网址.md
@@ -1,3 +1,20 @@
 # vim插件主页
 https://github.com/vim-airline/vim-airline
 
+# 少妇白洁 
+https://book.xbookcn.net/2000/05/blog-post_91.html
+
+# 有声小说
+https://fmfu.xyz/?u=sV0FNZGkWK3Dodf
+
+# avlulu
+http://avlulu.cc/
+
+# Pornlulu
+https://www.pornlulu.com/cat/66
+
+# 健康的宅男
+https://xslist.org/zh
+
+# 探花
+https://apianshipin.com
