--- a/8-有用的网站.md
+++ b/8-有用的网站.md
@@ -1,2 +1,6 @@
 # latex网站loongtex
 https://www.loongtex.com/docs/app/intro/
+# sphinx 生成hml网站
+https://www.sphinx-doc.org/en/master/usage/quickstart.html#setting-up-the-documentation-sources
+# chsrc
+换源工具
